<resources>
    <string name="app_name">MálagaSport</string>
    <string name="desarrollado_por">Desarrollado por Bilal Moreno Ahmed</string>
    <string name="app_description">MálagaSport es una aplicación destinada a ofrecer a los ciudadanos información acerca de las instalaciones deportivas (pistas deportivas, workout, skateparks&#8230;) y los eventos deportivos de Málaga. Los usuarios pueden valorar las instalaciones y dejar su comentario para que otros se informen mejor del estado de los lugares a los que quieren ir.</string>
    <string name="mapa_title">Mapa</string>
    <string name="instalaciones">Instalaciones</string>
    <string name="workout">Workout</string>
    <string name="favoritos">Favoritos</string>
    <string name="eventos">Eventos</string>
    <string name="configuracion">Configuración</string>
    <string name="acerca_de">Acerca de</string>
    <string name="email">Correo electrónico</string>
    <string name="currentUser">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="password_missing"><u>Recuperar contraseña</u></string>
    <string name="keep_loged_in">Recordar sesión</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="register">Registrar</string>
    <string name="nivel">Nivel: </string>
    <string name="num_maquinas">Maquinas: </string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="password_repeat">Repetir contraseña</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="msg_err_empty_email">El correo electrónico no puede estar vacío</string>
    <string name="msg_err_empty_password">La contraseña no puede estar vacía</string>
    <string name="linkedin_username" translatable="false">bilalmoreno92</string>
    <string name="github_user" translatable="false">bilalmoreno92</string>
    <string name="email_desarrollador" translatable="false">bilalmoreno92@gmail.com</string>
    <string name="msg_err_empty_name">El nombre no puede estar vacío</string>
    <string name="msg_err_invalid_email">Debe introducir un email válido</string>
    <string name="msg_err_invalid_credentials">El email y/o la contraseña no son correctos</string>
    <string name="msg_err_empty_fecha_nac">Debe introducir una fecha de nacimiento</string>
    <string name="msg_err_invalid_repeat_password">Las contraseñas no coinciden</string>
    <string name="msg_err_invalid_password">La contraseña debe tener entre 6 y 20 caracteres</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="recuperar">Recuperar contraseña</string>
    <string name="msg_password_changed">La constraseña ha sido cambiada</string>
    <string name="sort_level_asceding">Orden nivel ascendente</string>
    <string name="sort_level_descending">Orden nivel desdendente</string>
    <string name="info_meteo">Información meteorológica</string>
    <string name="meteo_on_map_sumary_off">Muestra información meteorológica sobre el mapa.</string>
    <string name="meteo_on_map_sumary_on">Opción disponible próximamente.</string>
    <string name="from">De:</string>
    <string name="tu_valoracion">Tu puntuación:</string>
    <string name="nueva_valoracion">Nueva valoración</string>
    <string name="editar_valoracion">Editar valoración</string>
    <string name="comentario">Tu comentario</string>
    <string name="msg_err_empty_comment">Debe indicar un comentario</string>
    <string name="msg_err_valoracion">Debe puntuar al menos con una estrella</string>
    <string name="nav_header_subtitle">La app para los deportistas de Málaga</string>
    <string name="settings">Ajustes</string>
    <string name="msg_error_general">Ocurrió un error inesperado</string>
    <string name="logout">Cerrar sesión</string>
    <string name="app" translatable="false">App</string>
    <string name="msg_err_register_failed">Ya existe una cuenta con este correo electrónico</string>
    <string name="msg_err_account_not_exists">Este correo no está registrado en el sistema</string>
    <string name="sort_az">Orden A-Z</string>
    <string name="sort_za">Orden Z-A</string>
    <string name="sort_before_first">Orden recientes primero</string>
    <string name="sort_after_first">Orden antiguos primero</string>
    <string name="sort_machines_count_asceding">Número máquinas ascendente</string>
    <string name="sort_machines_count_descending">Número máquinas descendente</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="about">Acerca de esta app</string>
    <string name="map_settings">Mapa</string>
    <string name="valoration_delete">Eliminar valoración</string>
    <string name="msg_error_valoration_delete">No se pudo encontrar la valoración</string>
    <string name="notification_channel_description">Notificaciones acerca del estado de la base de datos local de la App.</string>
    <string name="notification_channel_name">Cambios de la base de datos</string>
    <string name="notification_updating_title">Actualizando...</string>
    <string name="notification_updating_text">Actialuzando base de datos.</string>
    <string name="notification_updated_title">Actualizado</string>
    <string name="notification_updated_text">La base de datos fué actualizada.</string>
    <string name="error_update_title">Error de actualización</string>
    <string name="error_update_text">La base de datos no se actualizó correctamente.</string>
    <string name="usuario">Usuario</string>
</resources>
