<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DashBoardActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/btInstalaciones"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_instalaciones"
        android:padding="@dimen/dashboard_button_padding"
        android:text="@string/instalaciones"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/btFavoritos"
        app:layout_constraintEnd_toStartOf="@+id/btWorkout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btWorkout"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_workout"
        android:padding="@dimen/dashboard_button_padding"
        android:text="@string/workout"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/btEventos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btInstalaciones"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btFavoritos"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_favs"
        android:padding="@dimen/dashboard_button_padding"
        android:text="@string/favoritos"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/btConfiguracion"
        app:layout_constraintEnd_toStartOf="@+id/btEventos"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btInstalaciones" />

    <Button
        android:id="@+id/btEventos"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_eventos"
        android:padding="@dimen/dashboard_button_padding"
        android:text="@string/eventos"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/btAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btFavoritos"
        app:layout_constraintTop_toBottomOf="@+id/btWorkout" />

    <Button
        android:id="@+id/btConfiguracion"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_config"
        android:padding="@dimen/dashboard_button_padding"
        android:text="@string/configuracion"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btAbout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btFavoritos" />

    <Button
        android:id="@+id/btAbout"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_about"
        android:padding="@dimen/dashboard_button_padding"
        android:text="@string/acerca_de"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btConfiguracion"
        app:layout_constraintTop_toBottomOf="@+id/btEventos" />

</android.support.constraint.ConstraintLayout>